--- a/docs/schoppem/literatur.bib
+++ b/docs/schoppem/literatur.bib
@@ -5,3 +5,12 @@ isbn = {9781492064879},
 title = {{Statistik mit R : eine praxisorientierte Einführung in R}},
 url = {https://proquest.tech.safaribooksonline.de/book/programming/r/9781492064879/firstchapter}
 }
+
+@ONLINE{TT,
+	author = {Tiny Tapeout},
+	title = {{Tiny Tapeout Homepage}},
+	year = {2023},
+	note = {online verfügbar unter 
+	\url{https://tinytapeout.com};
+	zuletzt aufgerufen am 02.07.2023}
+}
