--- a/docs/schoppem/literatur.bib
+++ b/docs/schoppem/literatur.bib
@@ -14,3 +14,23 @@ url = {https://proquest.tech.safaribooksonline.de/book/programming/r/97814920648
 	\url{https://tinytapeout.com};
 	zuletzt aufgerufen am 02.07.2023}
 }
+
+@ONLINE{LFSRWiki,
+	author = {Wikipedia},
+	title = {{Linear rückgekoppelte Schieberegister}},
+	year = {2023},
+	note = {online verfügbar unter 
+	\url{https://de.wikipedia.org/wiki/Linear_r%C3%BCckgekoppeltes_Schieberegister#Arten};
+	zuletzt aufgerufen am 03.07.2023}
+}
+
+@article{fox2008linear,
+	title={Linear R{\"u}ckgekoppelte Schieberegister},
+	author={Fox, Dirk},
+	journal={Datenschutz und Datensicherheit-DuD},
+	volume={32},
+	number={5},
+	pages={351--351},
+	year={2008},
+	publisher={Vieweg Verlag Wiesbaden}
+}
