--- a/Ausarbeitungen/schoppem/literatur.bib
+++ b/Ausarbeitungen/schoppem/literatur.bib
@@ -25,7 +25,7 @@ url = {https://proquest.tech.safaribooksonline.de/book/programming/r/97814920648
 }
 
 @article{fox2008linear,
-	title={Linear R{\"u}ckgekoppelte Schieberegister},
+	title={Linear Rueckgekoppelte Schieberegister},
 	author={Fox, Dirk},
 	journal={Datenschutz und Datensicherheit-DuD},
 	volume={32},
